@@ -17,7 +17,16 @@ Version ?.?.? (tzdata v?????) - ??????????
   Timezone.period_for_local to the same level as Timezone.utc_to_local and
   Timezone.period_for_utc. Thanks to Michael Smedberg for reporting these 
   performance issues.
-
+* Ignore any offset in DateTimes passed in. The zone of Times is already 
+  ignored. All of the following now refer to the same UTC time (15:40 on 
+  17 April 2006). Previously, the second line would have been interpreted 
+  as 20:40.
+  
+  tz.utc_to_local(DateTime.new(2006, 4, 17, 15, 40, 0))
+  tz.utc_to_local(DateTime.new(2006, 4, 17, 15, 40, 0).new_offset(Rational(5, 24)))
+  tz.utc_to_local(Time.utc(2006, 4, 17, 15, 40, 0))
+  tz.utc_to_local(Time.local(2006, 4, 17, 15, 40, 0))
+  
 
 Version 0.2.0 (tzdata v2006c) - 3-Apr-2006
 ------------------------------------------
